fix: [MGS-5330] Move minicart message outside minicart. Adjust minicart content in order to lower layout shift. Make global messages fixed

--- a/src/components/messages/messages.scss
+++ b/src/components/messages/messages.scss
@@ -119,7 +119,7 @@ $messages_has-close-button: deep-get(
         &[data-role='checkout-messages'] {
             opacity: 1 !important;
             width: 100% !important;
-            z-index: 700 !important;
+            z-index: 800 !important;
             overflow: visible !important;
         }
     }
